fix column alignment on View Book Definition page in ie
git-tfs-id: [https://tfsnpt.int.thomson.com:443/tfs/Cobalt_Collection/]$/Cobalt eBook Builder/Development;C1060259

--- a/ebookManager/WebContent/theme/layout.css
+++ b/ebookManager/WebContent/theme/layout.css
@@ -367,6 +367,7 @@ td.field {
 .bookDefinitionView .leftDefinitionForm,
 .bookDefinitionView .rightDefinitionForm {
 	width: 440px;
+	min-width: 440px;
 	vertical-align: top;
 }
 
